--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ body {
     background-color: transparent;
 }
 
-.control-button .control-button-icon {
+.control-button * {
     font-size: 200%;
     color: rgba(180, 180, 180, 0.541);
     cursor: pointer;
